crates/lib/tests/snapshots/serde__json_mappings-2.snap
---
source: crates/lib/tests/serde.rs
expression: "de_json({\n    \"foo\": 5654,\n    \"bar\": [1, 15, 44],\n    \"baz\": [\"it's 🥶°C\"],\n    \"quux\": { \"Unit\": [] },\n    \"and_peggy\": null,\n    \"identity\": [\"0x0\"]\n})"
---
(
    foo = 5654,
    bar = 0x010f2c,
    baz = [
        "it's 🥶°C",
    ],
    quux = (
        Unit = (),
    ),
    and_peggy = (
        none = (),
    ),
    identity = (
        __identity__ = 0x0000000000000000000000000000000000000000000000000000000000000000,
    ),
)
