crates/lib/tests/snapshots/serde__json_mappings.snap
---
source: crates/lib/tests/serde.rs
expression: "de_json({\n    \"foo\": 42,\n    \"bar\": \"404040FFFF0A48656C6C6F\",\n    \"baz\": [\"heyyyyyy\", \"hooo\"],\n    \"quux\": { \"Hash\": \"54a3e6d2b0959deaacf102292b1cbd6fcbb8cf237f73306e27ed82c3153878aa\" },\n    \"and_peggy\": { \"some\": 3.141592653589793238426 },\n    \"identity\": [\"0x0\"]\n})"
---
(
    foo = 42,
    bar = 0x404040ffff0a48656c6c6f,
    baz = [
        "heyyyyyy",
        "hooo",
    ],
    quux = (
        Hash = 0x54a3e6d2b0959deaacf102292b1cbd6fcbb8cf237f73306e27ed82c3153878aa,
    ),
    and_peggy = (
        some = 3.141592653589793,
    ),
    identity = (
        __identity__ = 0x0000000000000000000000000000000000000000000000000000000000000000,
    ),
)
